# wildboottest

./: .gitignore  404.html  LICENSE  README.Rmd  README.md  base.html  design discussions.md  development_notebook.Rmd  development_notebook.html  dfsd  index.html  mkdocs.yml  objects.inv  pyproject.toml  readme.html  readme.md  requirements_test.txt  search.html  setup.py  test.md  wildboottest.code-workspace
.github/workflows/: build-website.yaml  ci-tests.yaml
base/: index.html
data/: test_df.csv  test_df_fwc_res.csv
docs/: base.html  base.md  index.md  library_apis.md  weights.md
library_apis/: index.html
search/: search_index.json
site/: index.html  objects.inv
site/base/: index.html
site/library_apis/: index.html
site/search/: search_index.json
src/: Wildboottest-method.py  benchmarks.py  boot_algo3.py  get_pvalue.py  get_scores.py  get_weights.py  lineamodels_api.py
tests/: bootalgo-tests.py  sim_sample.dta  test_CL.py  test_HC.py  test_bootalgo.py  test_error_warning.py  test_full_enumeration.py  test_mle.ipynb  test_score.do  test_seeds.py  test_stochastic.py  test_weights.py  utils.R
weights/: index.html
wildboottest/: weights.py  wildboottest.py  wildboottestHC.py
