[tool.poetry]
name = "wildboottest"
version = "0.3.1"
description = "Wild Cluster Bootstrap Inference for Linear Models in Python"
authors = [
  "Alexander Fischer <alexander-fischer1801@t-online.de>",
  "Aleksandr Michuda <amichuda@gmail.com>"
]
maintainers= [
  "Aleksandr Michuda <amichuda@gmail.com>",
  "Alexander Fischer <alexander-fischer1801@t-online.de>"
]

license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
readme = "README.md"
repository="https://github.com/s3alfisc/wildboottest"


[tool.poetry.dependencies]
python=">=3.8,<4.0"
numba=">=0.57"
numpy=">=1.18"
pandas=">=1.4"
statsmodels=">=0.13"
tabulate = "^0.9.0"

[tool.poetry.dev-dependencies]
poetry = ">=1.4.2"
pytest = ">=7.0.0"
numba=">=0.57"
numpy=">=1.22"
pandas=">=1.4"
statsmodels=">=0.13"
tabulate = ">=0.9.0"
mkdocs-material = "^8.5.10"
mkdocstrings = "^0.19.0"
poetry-dynamic-versioning = "^0.21.1"
pymdown-extensions = ">=10.0"


[tool.poetry.group.dev.dependencies]
mkdocstrings-python-legacy = "^0.2.3"
mkdocstrings = {version = "^0.19.0", extras = ["python"], optional = true }
pymdown-extensions = ">=10.0"


[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
pymdown-extensions = ">=10.0"


[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
pymdown-extensions = ">=10.0"


[tool.poetry-dynamic-versioning.substitution]
folders = [
    {path = "wildboottest"}
]

